--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2756,7 +2756,7 @@ h3 {
     }
 }
 .home-bg-three {
-    background-image: url(assets/img/home/7.png);
+    background-image: url(assets/img/home/home-bg.jpg);
     background-position: center center;
     background-size: cover;
     z-index: 1;
