--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -4,8 +4,8 @@
             <div class="col-lg-8 col-md-12">
                 <div class="header-widget">
                     <ul>
-                        <li><i class="icofont-clock-time"></i> Sun - Thu : 10:00AM - 06:00PM</li>
-                        <li><i class="icofont-location-pin"></i> 28/A Street, New York City</li>
+                        <li><i class="icofont-clock-time"></i> open 24X7 </li>
+                        <li><i class="icofont-location-pin"></i> 4-122 Earl Thompson Road Ayr, Ontario N0B 1E0</li>
                         <li><i class="icofont-phone"></i> <a href="tel:+880123456789">+88 0123 456 789</a></li>
                     </ul>
                 </div>
@@ -41,7 +41,7 @@
 
                 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="javascript:void(0)" class="nav-link dropdown-toggle">Home <i class="icofont-rounded-right"></i></a>
 
                             <ul class="dropdown-menu">
@@ -51,11 +51,11 @@
 
                                 <li class="nav-item"><a routerLink="/home-three" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Home Page 3</a></li>
                             </ul>
-                        </li>
+                        </li> -->
 
-                        <li class="nav-item"><a routerLink="/about" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">About</a></li>
+                        <!-- <li class="nav-item"><a routerLink="/about" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">About</a></li> -->
 
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="javascript:void(0)" class="nav-link dropdown-toggle">Services <i class="icofont-rounded-right"></i></a>
 
                             <ul class="dropdown-menu">
@@ -67,9 +67,9 @@
 
                                 <li class="nav-item"><a routerLink="/service-details" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Service details</a></li>
                             </ul>
-                        </li>
+                        </li> -->
 
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="javascript:void(0)" class="nav-link dropdown-toggle">Blog <i class="icofont-rounded-right"></i></a>
 
                             <ul class="dropdown-menu">
@@ -79,9 +79,9 @@
 
                                 <li class="nav-item"><a routerLink="/blog-details" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Blog details</a></li>
                             </ul>
-                        </li>
+                        </li> -->
 
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="javascript:void(0)" class="nav-link dropdown-toggle">Pages <i class="icofont-rounded-right"></i></a>
 
                             <ul class="dropdown-menu">
@@ -91,9 +91,9 @@
 
                                 <li class="nav-item"><a routerLink="/error" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">404 Page</a></li>
                             </ul>
-                        </li>
+                        </li> -->
 
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a href="javascript:void(0)" class="nav-link dropdown-toggle">Team <i class="icofont-rounded-right"></i></a>
                             
                             <ul class="dropdown-menu">
@@ -101,7 +101,18 @@
 
                                 <li class="nav-item"><a routerLink="/team-two" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Team two</a></li>
                             </ul>
-                        </li>
+                        </li> -->
+
+                        <!-- <li class="nav-item"><a routerLink="/contact" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Contact</a></li> -->
+                        
+                        
+                        <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Home</a></li>
+                        
+                        <li class="nav-item"><a routerLink="/about" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">About us</a></li>
+                        
+                        <li class="nav-item"><a routerLink="/products" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Products</a></li>
+                        
+                        <li class="nav-item"><a routerLink="/rentals" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Rentals</a></li>
 
                         <li class="nav-item"><a routerLink="/contact" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Contact</a></li>
                     </ul>
