--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -26,40 +26,24 @@
             <div class="col-lg-6">
                 <div class="about-text">   
                     <div class="section-head">
-                        <h2>We have been doing projects since 2008.</h2>
-                        <p>It is a long fact that a reader will be distracted by the readable content.</p>
+                        <h2>Wholesale Distributor Of Fencing Supplies Since 2016</h2>
+                        <p>Our journey started in 2016 from when we always wanted to build an ever strong and trustworthy
+                            relationship with our clients. As a reputed Fence supplies company, we provide only premium
+                            quality fence products at reasonable prices which makes our clients meet us again..</p>
                     </div>
 
-                    <ul>
-                        <li>
-                            <i class="icofont-check-circled"></i>
-                            100% Secured
-                        </li>
-                        <li>
-                            <i class="icofont-check-circled"></i>
-                            Fast & Clean Service     
-                        </li>
-                        <li>
-                            <i class="icofont-check-circled"></i>
-                            Well Disciplined
-                        </li>
-                        <li>
-                            <i class="icofont-check-circled"></i>
-                            24/7 Services
-                        </li>
-                        <li>
-                            <i class="icofont-check-circled"></i>
-                            Budget Oriented
-                        </li>
-                        <li>
-                            <i class="icofont-check-circled"></i>
-                            Online Payment
-                        </li>
+                    <!-- <ul>
+                        <li> <i class="icofont-check-circled"></i> 100% Secured </li>
+                        <li> <i class="icofont-check-circled"></i> Fast & Clean Service </li>
+                        <li> <i class="icofont-check-circled"></i> Well Disciplined </li>
+                        <li> <i class="icofont-check-circled"></i> 24/7 Services </li>
+                        <li> <i class="icofont-check-circled"></i> Budget Oriented </li>
+                        <li> <i class="icofont-check-circled"></i> Online Payment </li>
                     </ul>
 
                     <div class="theme-button">
                         <a routerLink="/" class="default-btn">Learn More</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -83,28 +67,28 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-3 col-6 offset-lg-1">
                             <div class="counter-text">
-                                <h2><span class="counter">1</span>K</h2>
+                                <h2><span class="counter">5000</span>Km</h2>
                                 <p>Job Done</p>
                             </div>
                         </div>
 
                         <div class="col-lg-5 col-md-3 col-6">
                             <div class="counter-text">
-                                <h2><span class="counter">989</span></h2>
+                                <h2><span class="counter">850</span></h2>
                                 <p>Happy Clients</p>
                             </div>
                         </div>
 
                         <div class="col-lg-5 col-md-3 col-6 offset-lg-1">
                             <div class="counter-text">
-                                <h2><span class="counter">45</span></h2>
-                                <p>Experts</p>
+                                <h2><span class="counter"> </span></h2>
+                                <p> </p>
                             </div>
                         </div>
 
                         <div class="col-lg-5 col-md-3 col-6">
                             <div class="counter-text">
-                                <h2><span class="counter">12</span></h2>
+                                <h2><span class="counter">10</span></h2>
                                 <p>Years of Experience</p>
                             </div>
                         </div>
