--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -105,7 +105,7 @@
 
                     <ul class="find-us">
                         <li>                                   
-                            <i class="icofont-location-pin"></i> 28/A Street, New York City     
+                            <i class="icofont-location-pin"></i> 4-122 Earl Thompson Road Ayr, Ontario N0B 1E0     
                         </li>
                         <li>
                             <i class="icofont-phone"></i>
