--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1222,7 +1222,7 @@ h3 {
 
 /* Testimonial CSS Start */
 .testimonial-bg {
-    background-image: url(assets/img/testimonial/teastimonial-bg.png);
+    background-image: url(assets/img/testimonial/teastimonial-bg.jpg);
     background-position: center center;
     background-size: cover;
     width: 100%;
@@ -3108,7 +3108,7 @@ h3 {
         }
     }
     .why-us-img {
-        background-image: url(assets/img/why-choose/why-choose2.png);
+        background-image: url(assets/img/VG-Fence-why-choose_845x725.jpg);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -3452,7 +3452,7 @@ h3 {
 /*------------- ABOUT PAGE CSS START ----------------*/
 /* About Title CSS Start */
 .about-title-bg {
-    background-image: url(assets/img/title-bg/1.png);
+    background-image: url(assets/img/title-bg/title-bg-1920x350.jpg);
     background-position: center center;
     background-size: cover;
     height: 350px;
@@ -3852,7 +3852,7 @@ h3 {
     }
 }
 .contact-title-bg {
-    background-image: url(assets/img/title-bg/3.png);
+    background-image: url(assets/img/title-bg/title-bg-1920x350.jpg);
     background-position: center center;
     background-size: cover;
     height: 350px;
