--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -56,7 +56,7 @@
                 <div class="footer-widget">
                     <div class="logo">
                         <a routerLink="/">
-                            <img src="assets/img/logo-2.png" alt="logo">
+                            <img src="assets/img/VG-Fence-Logo-2.png" alt="logo">
                         </a>
                     </div>
                     <p>Lorem ipsum dolor sit amet, tur adipiscing elit, sed do eiusmod tempor contratc.</p>
