--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -28,15 +28,15 @@
 <div class="navbar-area">
     <div class="mobile-nav">
         <a routerLink="/" class="logo">
-            <img src="assets/img/logo.png" alt="logo">
+            <img src="assets/img/VG-Fence-Logo.png" alt="logo">
         </a>
     </div>
 
     <div class="main-nav">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light">
-                <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logo.png" alt="logo">
+                <a class="navbar-brand" routerLink="/">
+                    <img src="assets/img/VG-Fence-Logo.png" alt="logo">
                 </a>
 
                 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
