--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -358,14 +358,14 @@
 <section class="blog-section pt-100">
     <div class="container">
         <div class="section-head text-center">
-            <h2>Rental <span>Service</span></h2>
+            <h2><span>Rental</span> Service</h2>
         </div>
 
         <div class="blog-slider owl-carousel owl-theme">
 
             <div class="blog-area">
                 <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/blog/3.png" alt="blog image"></a>
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Temporary-Fencing-Rentals.jpg" alt="blog image"></a>
                 </div>
 
                 <div class="blog-text">
@@ -377,7 +377,7 @@
 
             <div class="blog-area">
                 <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/blog/1.png" alt="blog image"></a>
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Temporary-Tree-Protection-Fence.jpg" alt="blog image"></a>
                 </div>
 
                 <div class="blog-text">
@@ -388,7 +388,7 @@
 
             <div class="blog-area">
                 <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/blog/2.png" alt="blog image"></a>
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Privacy-Fence-Screens.jpg" alt="blog image"></a>
                 </div>
 
                 <div class="blog-text">
@@ -399,25 +399,23 @@
 
             <div class="blog-area">
                 <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/blog/1.png" alt="blog image"></a>
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Perimeter-Security-Panels.jpg" alt="blog image"></a>
                 </div>
 
                 <div class="blog-text">
                     <h4><a routerLink="/">Perimeter & Security Panels</a></h4>
                     <p>These fence panels facilitate us to provide limiting the number of access points and in order to prevent intruders and allow only authorized access</p>
-                    <a routerLink="/" class="blog-btn">Read More <i class="icofont-rounded-right"></i></a>
                 </div>
             </div>
 
             <div class="blog-area">
                 <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/blog/2.png" alt="blog image"></a>
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Fencing-Gate-Assemblies.jpg" alt="blog image"></a>
                 </div>
 
                 <div class="blog-text">
                     <h4><a routerLink="/">Fencing Gate Assemblies</a></h4>
                     <p>Fence gates, shorter and more decorative than fences, are placed in the middle of the fence to provide property access only at the entry points.</p>
-                    <a routerLink="/" class="blog-btn">Read More <i class="icofont-rounded-right"></i></a>
                 </div>
             </div>
             
