--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -70,19 +70,19 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6">
+            <!-- <div class="col-lg-3 col-md-6">
                 <div class="footer-widget pl-40">
                     <h3>Services</h3>
 
                     <ul>
-                        <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Low Cost</a></li>
-                        <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Fastest Service</a></li>
-                        <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Professional Cleaning</a></li>
-                        <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Home Cleaning</a></li>
-                        <li><i class="icofont-simple-right"></i> <a routerLink="/service-details">Office Cleaning</a></li>
+                        <li><i class="icofont-simple-right"></i> <a routerLink="/">Low Cost</a></li>
+                        <li><i class="icofont-simple-right"></i> <a routerLink="/">Fastest Service</a></li>
+                        <li><i class="icofont-simple-right"></i> <a routerLink="/">Professional Cleaning</a></li>
+                        <li><i class="icofont-simple-right"></i> <a routerLink="/">Home Cleaning</a></li>
+                        <li><i class="icofont-simple-right"></i> <a routerLink="/">Office Cleaning</a></li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
 
             <div class="col-lg-3 col-md-6">
                 <div class="footer-widget pl-40">
@@ -91,9 +91,9 @@
                     <ul>
                         <li><i class="icofont-simple-right"></i> <a routerLink="/index">Home</a></li>
                         <li><i class="icofont-simple-right"></i> <a routerLink="/about">About Us</a></li>
-                        <li><i class="icofont-simple-right"></i> <a routerLink="/blog">Blog</a></li>
-                        <li><i class="icofont-simple-right"></i> <a routerLink="/team">Team</a></li>
-                        <li><i class="icofont-simple-right"></i> <a routerLink="/testimonial">Testimonial</a></li>
+                        <li><i class="icofont-simple-right"></i> <a routerLink="/products">Products</a></li>
+                        <li><i class="icofont-simple-right"></i> <a routerLink="/rentals">Rentals</a></li>
+                        <li><i class="icofont-simple-right"></i> <a routerLink="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -101,7 +101,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="footer-widget">
                     <h3>Find Us</h3>
-                    <p class="find-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.</p>
+                    <!-- <p class="find-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.</p> -->
 
                     <ul class="find-us">
                         <li>                                   
@@ -109,7 +109,7 @@
                         </li>
                         <li>
                             <i class="icofont-phone"></i>
-                            <a href="tel:+880123456789">+88 0123 456 789</a>
+                            <a href="tel:+12268686760">+1 226 868 6760</a>
                         </li>
                         <li>
                             <i class="icofont-ui-message"></i>
