--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13755,7 +13755,7 @@ h3 {
 /* Team CSS End */
 /* Testimonial CSS Start */
 .testimonial-bg {
-  background-image: url('teastimonial-bg.png');
+  background-image: url('teastimonial-bg.jpg');
   background-position: center center;
   background-size: cover;
   width: 100%;
@@ -15485,7 +15485,7 @@ h3 {
   font-size: 15px;
 }
 .why-us .why-us-img {
-  background-image: url('why-choose2.png');
+  background-image: url('VG-Fence-why-choose_845x725.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15779,7 +15779,7 @@ h3 {
 /*------------- ABOUT PAGE CSS START ----------------*/
 /* About Title CSS Start */
 .about-title-bg {
-  background-image: url('assets-img-title-bg-1.png');
+  background-image: url('title-bg-1920x350.jpg');
   background-position: center center;
   background-size: cover;
   height: 350px;
@@ -16116,7 +16116,7 @@ h3 {
 }
 
 .contact-title-bg {
-  background-image: url('assets-img-title-bg-3.png');
+  background-image: url('title-bg-1920x350.jpg');
   background-position: center center;
   background-size: cover;
   height: 350px;
