--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -70,9 +70,9 @@
                 </div>
             </div>
 
-            <!-- <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="footer-widget pl-40">
-                    <h3>Services</h3>
+                    <!-- <h3>Services</h3>
 
                     <ul>
                         <li><i class="icofont-simple-right"></i> <a routerLink="/">Low Cost</a></li>
@@ -80,9 +80,9 @@
                         <li><i class="icofont-simple-right"></i> <a routerLink="/">Professional Cleaning</a></li>
                         <li><i class="icofont-simple-right"></i> <a routerLink="/">Home Cleaning</a></li>
                         <li><i class="icofont-simple-right"></i> <a routerLink="/">Office Cleaning</a></li>
-                    </ul>
+                    </ul> -->
                 </div>
-            </div> -->
+            </div>
 
             <div class="col-lg-3 col-md-6">
                 <div class="footer-widget pl-40">
