--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -137,7 +137,7 @@
 
                 <div class="col-lg-6">
                     <div class="copyright-text text-end">
-                        <p>© Kiaz is Proudly Owned by <a href="https://hibootstrap.com/" target="_blank">HiBootstrap</a></p>
+                        <p>© VG Fence</p>
                     </div>
                 </div>
             </div>
