products rentals list

--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -110,9 +110,33 @@
                         
                         <li class="nav-item"><a routerLink="/about" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">About us</a></li>
                         
-                        <li class="nav-item"><a routerLink="/products" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Products</a></li>
-                        
-                        <li class="nav-item"><a routerLink="/rentals" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Rentals</a></li>
+                        <!-- <li class="nav-item"><a routerLink="/products" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Products</a></li> -->
+                        <li class="nav-item">
+                            <a href="javascript:void(0)" class="nav-link dropdown-toggle">Products <i class="icofont-rounded-right"></i></a>
+                            
+                            <ul class="dropdown-menu">
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Fesidential Fence</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Industrial Fence</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Commercial Fence</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Cantilever & Bifold Gates</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Fittings and Fence Accessories</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Custom Work</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">CNC</a></li>
+                            </ul>
+                        </li> 
+
+                        <!-- <li class="nav-item"><a routerLink="/rentals" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Rentals</a></li> -->
+
+                        <li class="nav-item">
+                            <a href="javascript:void(0)" class="nav-link dropdown-toggle">Rentals <i class="icofont-rounded-right"></i></a>
+                            
+                            <ul class="dropdown-menu">
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Temporary Tree Protection Fence</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Privacy Fence Screens</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Fence Gate Assemblies</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Perimeter & Security Panels</a></li>
+                            </ul>
+                        </li> 
 
                         <li class="nav-item"><a routerLink="/contact" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Contact</a></li>
                     </ul>
