--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -89,7 +89,7 @@
                 <div class="about-text">
                     <p>Our journey started in 2016 from when we always wanted to build an ever strong and trustworthy
                         relationship with our clients. As a reputed Fence supplies company, we provide only premium
-                        quality fence products at reasonable prices which makes our clients meet us again..</p>
+                        quality fence products at reasonable prices which makes our clients meet us again.</p>
 
                     <div class="theme-button">
                         <a routerLink="/about" class="default-btn">Read More</a>
