--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -59,7 +59,7 @@
                             <img src="assets/img/VG-Fence-Logo-2.png" alt="logo">
                         </a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, tur adipiscing elit, sed do eiusmod tempor contratc.</p>
+                    <!-- <p>Lorem ipsum dolor sit amet, tur adipiscing elit, sed do eiusmod tempor contratc.</p> -->
 
                     <div class="email">
                         <form class="newsletter-form">
@@ -113,7 +113,7 @@
                         </li>
                         <li>
                             <i class="icofont-ui-message"></i>
-                            <a href="mailto:info@kiaz.com">info@kiaz.com</a>
+                            <!-- <a href="mailto:info@kiaz.com">info@kiaz.com</a> -->
                         </li>
                     </ul>
                 </div>
