--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -256,10 +256,7 @@
 
             <div class="service-item service-item-Fence-Fabrication">
                 <h3>Fence Fabrication</h3>
-                <p>We follow a “you design, we fabricate” approach to fabricate fence designs that the client already
-                    has
-                    with them </p>
-                <p>We have with us a team of skilled craftsmen who can fabricate your fences more efficiently</p>
+                <p>We follow a “you design, we fabricate” approach to fabricate fence designs that the client already has with them </p>
                 <div class="theme-button">
                     <a routerLink="/" class="default-btn">Read More</a>
                 </div>
@@ -277,6 +274,74 @@
 
     </div>
 </div>
+
+<section class="blog-section pt-100">
+    <div class="container">
+        <div class="section-head text-center">
+            <h2><span>Rental</span> Service</h2>
+        </div>
+
+        <div class="blog-slider owl-carousel owl-theme">
+
+            <div class="blog-area">
+                <div class="blog-img">
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Temporary-Fencing-Rentals.jpg" alt="blog image"></a>
+                </div>
+
+                <div class="blog-text">
+                    <h4><a routerLink="/">Temporary Fencing Rentals</a></h4>
+                    <p>With temporary fencing being mandatory during property construction in some geographic locations across the world, we help you meet your rental fencing needs so that you can remain stress-free while building your dream commercial and residential projects. 
+                        Our temporary fence products are lightweight yet very strong making it more suitable for building site security, protection and barricade applications. We deliver temporary fence panels on the day you want them.</p>
+                </div>
+            </div>
+
+            <div class="blog-area">
+                <div class="blog-img">
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Temporary-Tree-Protection-Fence.jpg" alt="blog image"></a>
+                </div>
+
+                <div class="blog-text">
+                    <h4><a routerLink="/">Temporary Tree Protection Fence</a></h4>
+                    <p>Before even bringing any materials to the construction site, temporary fences are installed around trees to prevent root and branch damage.</p>
+                </div>
+            </div>
+
+            <div class="blog-area">
+                <div class="blog-img">
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Privacy-Fence-Screens.jpg" alt="blog image"></a>
+                </div>
+
+                <div class="blog-text">
+                    <h4><a routerLink="/">Privacy Fence Screens</a></h4>
+                    <p>Privacy fence screens serve to meet our privacy concerns during special occasions and can also be used to hide unattractive features like water tanks, sheds etc.</p>
+                </div>
+            </div>
+
+            <div class="blog-area">
+                <div class="blog-img">
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Perimeter-Security-Panels.jpg" alt="blog image"></a>
+                </div>
+
+                <div class="blog-text">
+                    <h4><a routerLink="/">Perimeter & Security Panels</a></h4>
+                    <p>These fence panels facilitate us to provide limiting the number of access points and in order to prevent intruders and allow only authorized access</p>
+                </div>
+            </div>
+
+            <div class="blog-area">
+                <div class="blog-img">
+                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Fencing-Gate-Assemblies.jpg" alt="blog image"></a>
+                </div>
+
+                <div class="blog-text">
+                    <h4><a routerLink="/">Fencing Gate Assemblies</a></h4>
+                    <p>Fence gates, shorter and more decorative than fences, are placed in the middle of the fence to provide property access only at the entry points.</p>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</section>
 
 <section class="why-us">
     <div class="container-fluid">
@@ -354,71 +419,3 @@
         </div>
     </div>
 </div>
-
-<section class="blog-section pt-100">
-    <div class="container">
-        <div class="section-head text-center">
-            <h2><span>Rental</span> Service</h2>
-        </div>
-
-        <div class="blog-slider owl-carousel owl-theme">
-
-            <div class="blog-area">
-                <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Temporary-Fencing-Rentals.jpg" alt="blog image"></a>
-                </div>
-
-                <div class="blog-text">
-                    <h4><a routerLink="/">Temporary Fencing Rentals</a></h4>
-                    <p>With temporary fencing being mandatory during property construction in some geographic locations across the world, we help you meet your rental fencing needs so that you can remain stress-free while building your dream commercial and residential projects. 
-                        Our temporary fence products are lightweight yet very strong making it more suitable for building site security, protection and barricade applications. We deliver temporary fence panels on the day you want them.</p>
-                </div>
-            </div>
-
-            <div class="blog-area">
-                <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Temporary-Tree-Protection-Fence.jpg" alt="blog image"></a>
-                </div>
-
-                <div class="blog-text">
-                    <h4><a routerLink="/">Temporary Tree Protection Fence</a></h4>
-                    <p>Before even bringing any materials to the construction site, temporary fences are installed around trees to prevent root and branch damage.</p>
-                </div>
-            </div>
-
-            <div class="blog-area">
-                <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Privacy-Fence-Screens.jpg" alt="blog image"></a>
-                </div>
-
-                <div class="blog-text">
-                    <h4><a routerLink="/">Privacy Fence Screens</a></h4>
-                    <p>Privacy fence screens serve to meet our privacy concerns during special occasions and can also be used to hide unattractive features like water tanks, sheds etc.</p>
-                </div>
-            </div>
-
-            <div class="blog-area">
-                <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Perimeter-Security-Panels.jpg" alt="blog image"></a>
-                </div>
-
-                <div class="blog-text">
-                    <h4><a routerLink="/">Perimeter & Security Panels</a></h4>
-                    <p>These fence panels facilitate us to provide limiting the number of access points and in order to prevent intruders and allow only authorized access</p>
-                </div>
-            </div>
-
-            <div class="blog-area">
-                <div class="blog-img">
-                    <a routerLink="/" class="d-block"><img src="assets/img/rentals/VG-Fence-Fencing-Gate-Assemblies.jpg" alt="blog image"></a>
-                </div>
-
-                <div class="blog-text">
-                    <h4><a routerLink="/">Fencing Gate Assemblies</a></h4>
-                    <p>Fence gates, shorter and more decorative than fences, are placed in the middle of the fence to provide property access only at the entry points.</p>
-                </div>
-            </div>
-            
-        </div>
-    </div>
-</section>
