Font-Family, footer changes

--- a/src/app/components/layouts/footer/footer.component.html
+++ b/src/app/components/layouts/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="contact-section">
+<!-- <div class="contact-section">
     <div class="container">
         <div class="contact-area">
             <div class="row align-items-center">
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <footer class="footer-area">
     <div class="container">
@@ -59,7 +59,7 @@
                             <img src="assets/img/VG-Fence-Logo-2.png" alt="logo">
                         </a>
                     </div>
-                    <!-- <p>Lorem ipsum dolor sit amet, tur adipiscing elit, sed do eiusmod tempor contratc.</p> -->
+                    <p>Lorem ipsum dolor sit amet, tur adipiscing elit, sed do eiusmod tempor contratc.</p>
 
                     <div class="email">
                         <form class="newsletter-form">
@@ -72,7 +72,7 @@
 
             <div class="col-lg-3 col-md-6">
                 <div class="footer-widget pl-40">
-                    <!-- <h3>Services</h3>
+                    <h3>Product Category</h3>
 
                     <ul>
                         <li><i class="icofont-simple-right"></i> <a routerLink="/">Low Cost</a></li>
@@ -80,11 +80,11 @@
                         <li><i class="icofont-simple-right"></i> <a routerLink="/">Professional Cleaning</a></li>
                         <li><i class="icofont-simple-right"></i> <a routerLink="/">Home Cleaning</a></li>
                         <li><i class="icofont-simple-right"></i> <a routerLink="/">Office Cleaning</a></li>
-                    </ul> -->
+                    </ul>
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6">
+            <!-- <div class="col-lg-3 col-md-6">
                 <div class="footer-widget pl-40">
                     <h3>Quick Links</h3>
 
@@ -96,7 +96,7 @@
                         <li><i class="icofont-simple-right"></i> <a routerLink="/contact">Contact</a></li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
 
             <div class="col-lg-3 col-md-6">
                 <div class="footer-widget">
